backends/drm: fix addFB2 fallback

Returned error codes are negative, not the actual value of the define.

BUG: 521333


(cherry picked from commit 85fa4ee22b57e834505864a20ac13de0a97a1161)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>